# doc-sync-client

./: .gitignore
src/: CMakeLists.txt  CSVConfig.cpp  CSVConfig.h  Commit.cpp  Commit.h  Document.cpp  Document.h  main.cpp  tests.cpp  tests.h
src/data/: tracked.json
src/data/commits/: .keep
src/test/: add-multiple-lines.txt  base.txt  foofile.txt  json-test.json
test/: add-line.txt  add-remove-multiple-lines.txt  remove-line.txt
